# coord-e.com

./: .gitignore  .prettierignore  .prettierrc.yml  .textlintrc.yml  README.md  default.nix  package-lock.json  package.json  prh.yaml  release.nix  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  deploy.yml  deploy_preview.yml  proofreading.yml
asset/: index.html
asset/style/: mobile.css  style.css
content/: .prettierignore  .textlintrc.yml  package-lock.json  package.json
content/asset/: index.html
content/asset/key/: D0F842E11C629F42.asc
content/asset/kord_eq/: index.html
content/post/: 2019-08-12-seccamp-2019-join.md  2019-08-19-seccamp-2019-joined.md  2019-12-24-type-class.md  2020-03-28-small-docker-image.md  2020-04-15-magicpak.md  2020-12-02-transfer.md  2020-12-12-purchase-2020.md  2022-12-14-touchosc-pcdj.md  2025-08-09-rekordbox-roll.md
content/template/: default.html  post-index.html  post.html
generator/: Main.hs  default.nix  generate-coord-e-com.cabal  hie.yaml
generator/Text/Formula/: Pandoc.hs
generator/Text/Link/: Pandoc.hs
generator/Text/TableOfContents/: Pandoc.hs
nix/: citeproc.nix  commonmark-pandoc.nix  hakyll.nix  latex-svg-hakyll.nix  latex-svg-hakyll.patch  latex-svg-pandoc.nix  latex-svg-pandoc.patch  nixpkgs.nix  overlay.nix  pandoc-types.nix  pandoc.nix  pandoc.patch  pkgs.nix  skylighting-core.nix  skylighting.nix  texlive-combined.nix  texmath.nix
static/: index.html
static/style/: mobile.css  pc.css  style.css
template/: default.html  post-index.html
(+21 files in other folders)
